<resources>
    <string name="app_name">SpaceX Fan</string>
    <string name="forgot_password_explanation">Don\'t worry! It happens. \nPlease enter the email associated with your account and we\'ll send an email to reset your password.</string>
    <string name="email">Email</string>
    <string name="send_email">Send Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="rockets">Rockets</string>
    <string name="favorites">Favorites</string>
    <string name="upcoming">Upcoming</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="height">Height</string>
    <string name="diameter">Diameter</string>
    <string name="mass">Mass</string>
    <string name="first_flight_date">First Flight Date</string>
    <string name="cost_per_launch">Cost per launch</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_in_forgot_password">Forgot Password</string>
    <string name="log_in">Log in</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="flight_number">Flight Number</string>
    <string name="launch_date">Launch Date</string>
    <string name="spacex_logo">SpaceX Logo</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="google_icon">Google Icon</string>
    <string name="upcoming_launch_image">Upcoming Launch Image</string>
    <string name="image_from_rocket">Image from Rocket</string>
    <string name="rocket_image">Rocket Image</string>

    <string name="empty_email">Email cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="password_not_match">Passwords are not the same</string>

    <string name="signin_accepted">User logged in successfully</string>
    <string name="signin_denied">Your password or e-mail address is wrong</string>
    <string name="register_successful">User registered successfully</string>
    <string name="register_error">Registration error</string>
    <string name="email_bad_pattern">Email does not match pattern.</string>
    <string name="empty_name_surname"><![CDATA[Name & Surname cannot be empty]]></string>
    <string name="check_email">Check your email to reset your password!</string>
    <string name="forgot_password_error">Try again! Something wrong happened!</string>
</resources>