<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_page_bg"
    tools:context=".view.login.SignInFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_in_logo_start"
        android:layout_marginTop="@dimen/sign_in_logo_top"
        android:layout_marginEnd="@dimen/sign_in_logo_end"
        android:contentDescription="@string/spacex_logo"
        android:scaleType="centerCrop"
        android:src="@drawable/spacex_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/large"
        android:layout_marginEnd="@dimen/medium"
        android:background="@android:color/transparent"
        android:hint="@string/e_mail"
        android:textColorHint="#ffffff"
        app:boxBackgroundColor="#3f4146"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="@dimen/mid"
        app:boxCornerRadiusBottomStart="@dimen/mid"
        app:boxCornerRadiusTopEnd="@dimen/mid"
        app:boxCornerRadiusTopStart="@dimen/mid"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        app:startIconDrawable="@drawable/mail_icon"
        app:startIconTint="#58FBC8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/large"
        android:layout_marginEnd="@dimen/medium"
        android:hint="@string/password"
        android:textColorHint="#ffffff"
        app:boxBackgroundColor="#3f4146"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="@dimen/mid"
        app:boxCornerRadiusBottomStart="@dimen/mid"
        app:boxCornerRadiusTopEnd="@dimen/mid"
        app:boxCornerRadiusTopStart="@dimen/mid"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="#58FBC8"
        app:hintTextColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        app:startIconDrawable="@drawable/password_icon"
        app:startIconTint="#58FBC8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/small"
        android:text="@string/sign_in_forgot_password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="75dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="#45d1a5"
        app:cardCornerRadius="@dimen/xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginBottom="@dimen/medium"
            android:gravity="center_horizontal"
            android:shadowColor="#66000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/small"
        android:gravity="center_horizontal"
        android:text="@string/or"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/google_sign_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="@dimen/small"
        android:layout_marginEnd="75dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="#3f4146"
        app:cardCornerRadius="@dimen/xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/medium"
            android:contentDescription="@string/google_icon"
            android:src="@drawable/google_icon" />

        <TextView
            android:id="@+id/google_sign_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginBottom="@dimen/medium"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.02"
            android:text="@string/sign_in_with_google"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="normal" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>