<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.axuca.spacexfan.view_model.RocketDetailVM" />

        <variable
            name="favoriteClickListener"
            type="com.axuca.spacexfan.adapter.FavoriteClickListener" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rocket_background"
        tools:context=".view.bottom_navigation.RocketDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/rocket_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.rocketInfo.rocket.name}"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="@color/primary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/add_to_favorite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_to_favorite"
                tools:text="Rocket 1" />

            <ImageView
                android:id="@+id/add_to_favorite"
                android:layout_width="@dimen/xlarge"
                android:layout_height="@dimen/xlarge"
                android:layout_marginTop="@dimen/xxlarge"
                android:contentDescription="@string/favorite_button"
                android:layout_marginEnd="@dimen/medium"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{() -> favoriteClickListener.onClick(viewModel.rocketInfo)}"
                android:src="@drawable/favorites_bar"
                app:buttonState="@{viewModel.rocketInfo.status}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/rocket_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large"
                android:layout_marginTop="@dimen/large"
                android:layout_marginEnd="@dimen/large"
                android:text="@{viewModel.rocketInfo.rocket.description}"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rocket_name"
                tools:text="Falcon 9 is a reusable, two-stage rocket designed and manufactured by SpaceX for the reliable and safe transport of people and payloads into Earth orbit and beyond. Falcon 9 is the world’s first orbital class reusable rocket. Reusability allows SpaceX to refly the most expensive parts of the rocket, which in turn drives down the cost of space access." />

            <!--            height-->
            <LinearLayout
                android:id="@+id/height_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginEnd="@dimen/large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rocket_description">

                <TextView
                    android:id="@+id/height_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/height"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/height_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@{viewModel.rocketInfo.rocket.height.toString()}"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!--            diameter-->
            <LinearLayout
                android:id="@+id/diameter_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large"
                android:layout_marginEnd="@dimen/large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/height_layout">

                <TextView
                    android:id="@+id/diameter_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/diameter"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/diameter_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@{viewModel.rocketInfo.rocket.diameter.toString()}"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mass_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large"
                android:layout_marginEnd="@dimen/large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/diameter_layout">

                <TextView
                    android:id="@+id/mass_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mass"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mass_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@{viewModel.rocketInfo.rocket.mass.toString()}"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/first_flight_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large"
                android:layout_marginEnd="@dimen/large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mass_layout">

                <TextView
                    android:id="@+id/first_flight_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/first_flight_date"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/first_flight_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@{viewModel.rocketInfo.rocket.firstFlightDate}"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--            costPerLaunch-->
            <LinearLayout
                android:id="@+id/cost_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large"
                android:layout_marginEnd="@dimen/large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_flight_layout">

                <TextView
                    android:id="@+id/cost_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cost_per_launch"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cost_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@{Integer.toString(viewModel.rocketInfo.rocket.costPerLaunch) + '$'}"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/images_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:orientation="vertical"
                app:cardBackgroundColor="@android:color/transparent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cost_layout"
                app:spanCount="2"
                app:submitRocketDetailData="@{viewModel.rocketInfo.rocket.flickrImages}"
                tools:listitem="@layout/rocket_detail_recycler_list_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>