<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="launch"
            type="com.axuca.spacexfan.model.UpcomingLaunch" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rocket_background"
        tools:context=".view.UpcomingDetailFragment">

        <TextView
            android:id="@+id/upcoming_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxlarge"
            android:gravity="center"
            android:maxLines="2"
            android:minLines="1"
            android:text="@{launch.name}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="A" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/image_card"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginStart="@dimen/large"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginEnd="@dimen/large"
            app:cardCornerRadius="@dimen/mid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upcoming_name">

            <ImageView
                android:id="@+id/upcoming_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/upcoming_launch_image"
                android:scaleType="centerCrop"
                app:loadUpcomingImage="@{launch.links}" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/upcoming_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginEnd="@dimen/large"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_card"
            app:upcomingText="@{launch.details}" />

        <LinearLayout
            android:id="@+id/flight_number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large"
            android:layout_marginTop="@dimen/large"
            android:layout_marginEnd="@dimen/large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upcoming_description">

            <TextView
                android:id="@+id/flight_number_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flight_number"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/flight_number_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:flightNumberText="@{launch.flightNumber}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/launch_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large"
            android:layout_marginTop="@dimen/large"
            android:layout_marginEnd="@dimen/large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flight_number_layout">

            <TextView
                android:id="@+id/height_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/launch_date"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/height_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:launchDate="@{launch.dateUtc}" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>